--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,28 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     ext {
-        nav_version = "2.5.2"
-        room_version = '2.4.2'
+        activity_version = '1.1.0'
+        appcompat_version = '1.5.1'
+        constraintlayout_version = '2.1.4'
+        core_ktx_version = '1.9.0'
+        coroutines_version = '1.4.2'
+        kotlin_version = '1.7.10'
+        lifecycle_version = '2.5.1'
+        material_version = '1.6.1'
+        nav_version = '2.5.2'
+        room_version = '2.4.3'
+    }
+    repositories {
+        google()
+        mavenCentral()
     }
     dependencies {
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
+        classpath 'com.android.tools.build:gradle:7.3.1'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+
+        // NOTE: Do not place your application dependencies here; they belong
+        // in the individual module build.gradle files
     }
 }
 
